# expresso

./: CMakeLists.txt  GEMINI.md  LICENSE
.specify/memory/: constitution.md
cmake/: ExpressoConfig.cmake.in
docs/: Future Considerations.md  PRD by Grok.md  PRD.md  build_and_install.md  spec by Grok.md
specs/001-expresso-is-an/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-expresso-is-an/checklists/: build_integration_qa_gate.md  cli_ux_qa_gate.md  cli_ux_review.md  core_logic_qa_gate.md  requirements.md  security_audit.md
specs/001-expresso-is-an/contracts/: cli-interface.md
specs/002-the-user-is/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-the-user-is/checklists/: build_integration_qa_gate_v2.md  cli_ux_input_qa_gate.md  core_language_qa_gate.md  non_functional_qa_gate.md  requirements.md  security_audit_v2.md
specs/002-the-user-is/contracts/: cli-interface.md
specs/coulda been 003-comprehensive-expresso-cli/: grammar-spec.md
src/cli/: CMakeLists.txt  cli_interface.c  cli_interface.cpp  cli_interface.h  main.c  repl.c  repl.h
src/core/: CMakeLists.txt  evaluator.c  evaluator.h  history.c  history.h  operations.c  operations.h  value.c  value.h
src/parser/: CMakeLists.txt  Expresso.g4  parser_wrapper.cpp  parser_wrapper.h
tests/integration/: test_input_history.c  test_interactive_session.c  test_non_interactive.c
tests/unit/core/: assert.h  test_evaluator.c  test_history.c  test_value.c
tests/unit/parser/: test_placeholder.cpp
